--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bounce Game</title>
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
     <style>
         canvas {
-            border: 1px solid black;
+            display: block;
+            margin: auto;
+            border: 2px solid black;
+        }
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
         }
     </style>
 </head>
 <body>
     <h1>Bounce Game</h1>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <canvas id="gameCanvas" width="500" height="400"></canvas>
     <py-script>
         from js import document, window
 
+        # Access the canvas
         canvas = document.getElementById("gameCanvas")
         ctx = canvas.getContext("2d")
 
         # Ball properties
-        ball_x = 200
-        ball_y = 200
-        ball_dx = 2
-        ball_dy = 2
+        ball_x = 250  # Initial x position
+        ball_y = 200  # Initial y position
+        ball_dx = 2   # Speed in x direction
+        ball_dy = 3   # Speed in y direction
         ball_radius = 10
 
-        # Game loop
+        # Animation loop
         def update(*args):
             global ball_x, ball_y, ball_dx, ball_dy
 
@@ -44,15 +53,16 @@
             ball_x += ball_dx
             ball_y += ball_dy
 
-            # Bounce on edges
+            # Bounce the ball on canvas edges
             if ball_x + ball_radius > canvas.width or ball_x - ball_radius < 0:
-                ball_dx = -ball_dx
+                ball_dx = -ball_dx  # Reverse x direction
             if ball_y + ball_radius > canvas.height or ball_y - ball_radius < 0:
-                ball_dy = -ball_dy
+                ball_dy = -ball_dy  # Reverse y direction
 
+            # Request the next frame
             window.requestAnimationFrame(update)
 
-        # Start the game loop
+        # Start the animation
         window.requestAnimationFrame(update)
     </py-script>
 </body>
