--- a/index.html
+++ b/index.html
@@ -3,49 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bounce Game</title>
     <style>
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+
         canvas {
-            border: 1px solid black;
+            border: 2px solid #000;
+        }
+
+        /* Ensuring the game canvas scales properly on mobile */
+        @media screen and (max-width: 768px) {
+            canvas {
+                width: 100%;
+                height: 100%;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Bounce Game</h1>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+
     <script>
-        // Simple bounce game logic
-        const canvas = document.getElementById("gameCanvas");
-        const ctx = canvas.getContext("2d");
+        // Game variables
+        let canvas = document.getElementById("gameCanvas");
+        let ctx = canvas.getContext("2d");
 
-        let ball = { x: 200, y: 200, vx: 2, vy: 3, radius: 10 };
+        let ballRadius = 10;
+        let x = canvas.width / 2;
+        let y = canvas.height - 30;
+        let dx = 2;
+        let dy = -2;
 
-        function draw() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
+        let paddleHeight = 10;
+        let paddleWidth = 75;
+        let paddleX = (canvas.width - paddleWidth) / 2;
 
-            // Draw the ball
-            ctx.beginPath();
-            ctx.arc(ball.x, ball.y, ball.radius, 0, Math.PI * 2);
-            ctx.fillStyle = "blue";
-            ctx.fill();
-            ctx.closePath();
+        let rightPressed = false;
+        let leftPressed = false;
 
-            // Update ball position
-            ball.x += ball.vx;
-            ball.y += ball.vy;
+        let score = 0;
 
-            // Bounce off walls
-            if (ball.x + ball.radius > canvas.width || ball.x - ball.radius < 0) {
-                ball.vx *= -1;
+        // Event listeners for paddle movement
+        document.addEventListener("keydown", keyDownHandler, false);
+        document.addEventListener("keyup", keyUpHandler, false);
+
+        function keyDownHandler(e) {
+            if (e.key == "Right" || e.key == "ArrowRight") {
+                rightPressed = true;
+            } else if (e.key == "Left" || e.key == "ArrowLeft") {
+                leftPressed = true;
             }
-            if (ball.y + ball.radius > canvas.height || ball.y - ball.radius < 0) {
-                ball.vy *= -1;
-            }
-
-            requestAnimationFrame(draw);
         }
 
-        draw();
+        function keyUpHandler(e) {
+            if (e.key == "Right" || e.key == "ArrowRight") {
+                rightPressed = false;
+            } else if (e.key == "Left" || e.key == "ArrowLeft") {
+                leftPressed = false;
+            }
+        }
+
+        // Draw the ball
+        function drawBall() {
+            ctx.beginPath();
+            ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
+            ctx.fillStyle = "#0095DD";
+            ctx.fill();
+            ctx.closePath();
+        }
+
+        // Draw the paddle
+        function drawPaddle() {
+            ctx.beginPath();
+            ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
+            ctx.fillStyle = "#0095DD";
+            ctx.fill();
+            ctx.closePath();
+        }
+
+        // Collision detection with walls
+        function collisionDetection() {
+            if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+                dx = -dx;
+            }
+            if (y + dy < ballRadius) {
+                dy = -dy;
+            } else if (y + dy > canvas.height - ballRadius) {
+                if (x > paddleX && x < paddleX + paddleWidth) {
+                    dy = -dy;
+                    score++;
+                } else {
+                    // Game over
+                    alert("GAME OVER! Score: " + score);
+                    document.location.reload();
+                }
+            }
+        }
+
+        // Update game logic
+        function updateGame() {
+            if (rightPressed && paddleX < canvas.width - paddleWidth) {
+                paddleX += 7;
+            } else if (leftPressed && paddleX > 0) {
+                paddleX -= 7;
+            }
+
+            x += dx;
+            y += dy;
+            collisionDetection();
+
+            // Clear the canvas
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Draw updated game objects
+            drawBall();
+            drawPaddle();
+
+            // Display the score
+            ctx.font = "16px Arial";
+            ctx.fillStyle = "#0095DD";
+            ctx.fillText("Score: " + score, 8, 20);
+
+            requestAnimationFrame(updateGame);
+        }
+
+        // Start the game
+        updateGame();
     </script>
 </body>
 </html>
